Updated the code to be compatible with Minecraft 1.20.6 and Silk API 1.0.4.